; ModuleID = '/home/carl/AnghaBench/linux/drivers/nvme/host/extr_pci.c_nvme_del_cq_end.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/nvme/host/extr_pci.c_nvme_del_cq_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.request = type { %struct.nvme_queue* }
%struct.nvme_queue = type { i32 }

@NVMEQ_DELETE_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.request*, i64)* @nvme_del_cq_end to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nvme_del_cq_end(%struct.request* %0, i64 %1) #0 {
  %3 = alloca %struct.request*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.nvme_queue*, align 8
  store %struct.request* %0, %struct.request** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.request*, %struct.request** %3, align 8
  %7 = getelementptr inbounds %struct.request, %struct.request* %6, i32 0, i32 0
  %8 = load %struct.nvme_queue*, %struct.nvme_queue** %7, align 8
  store %struct.nvme_queue* %8, %struct.nvme_queue** %5, align 8
  %9 = load i64, i64* %4, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = load i32, i32* @NVMEQ_DELETE_ERROR, align 4
  %13 = load %struct.nvme_queue*, %struct.nvme_queue** %5, align 8
  %14 = getelementptr inbounds %struct.nvme_queue, %struct.nvme_queue* %13, i32 0, i32 0
  %15 = call i32 @set_bit(i32 %12, i32* %14)
  br label %16

16:                                               ; preds = %11, %2
  %17 = load %struct.request*, %struct.request** %3, align 8
  %18 = load i64, i64* %4, align 8
  %19 = call i32 @nvme_del_queue_end(%struct.request* %17, i64 %18)
  ret void
}

declare dso_local i32 @set_bit(i32, i32*) #1

declare dso_local i32 @nvme_del_queue_end(%struct.request*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
